--- a/RazorPagesDatabase/Pages/Edit.cshtml
+++ b/RazorPagesDatabase/Pages/Edit.cshtml
@@ -9,7 +9,7 @@
     <p>This is where we are going to edit from</p>
 </div>
 
-<div class="text-center">
+<div class="text-left">
     <h1 class="display-8">Display</h1>
     <p>This is where we are going to display</p>
     <p>And I have no idea what I am doing...</p>
