--- a/RazorPagesDatabase/Pages/Privacy.cshtml
+++ b/RazorPagesDatabase/Pages/Privacy.cshtml
@@ -5,4 +5,5 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>This is where I declare I will mine your data</p>
+<p>It is also where I try to look like an honest used car salesperson</p>
